--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -11,7 +11,7 @@
           biodiversità! </p>
         <div class="d-flex">
           <a href="" class="btn btn-primary text-center text-white me-2 rounded-pill px-4 py-2 fw-bold tuffo"
-            routerLink="/tour">Tuffati</a>
+            routerLink="/tour">Accedi</a>
         </div>
       </div>
 
