--- a/src/app/components/tour/tour.component.html
+++ b/src/app/components/tour/tour.component.html
@@ -3,7 +3,7 @@
 
 <div class="banner-image mt-5">
   <div class="container pb-5">
-    <div class="row py-5 align-items-center">
+    <div class="row py-5 ">
       <div class="col-lg-6">
         <h1 class="display-4 mb-5 pt-5  text-white">Tour virtuale</h1>
         <p class="h5 aa mb-5  text-white">
@@ -16,22 +16,24 @@
 
 
 <div class=" text-center bg-dark hero pb-5 px-5 pt-5">
-  <div class="row row-cols-1 row-cols-md-2 g-4 pb-5">
+  <div class="row row-cols-1 row-cols-md-2 g-4 pb-5 justify-content-center ">
     <div class="col">
       <div class="card">
         <iframe id="evrFrame" width="100%" height="640" style="width: 100%; height: 640px; border: none; max-width: 100%;"  allowvr="yes" allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"  frameborder="0" src="https://webobook.com/public/64079c811b33b177b67de1d2,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&" ></iframe>
         <div class="card-body">
           <h5 class="card-title text-white fw-bold ">La baia degli squali</h5>
           <p class="card-text text-white">La baia degli squali, la grande vasca dedicata ai predatori del mare, che ospita, oltre a diverse specie di squalo provenienti da vari ambienti marini, altri pesci interessanti.</p>
+          <a href="https://webobook.com/public/64079c811b33b177b67de1d2,en"  target="_blank" class="btn btn-primary rounded-pill px-4">Virtual tour</a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <iframe width="100%" height="640" style="width: 100%; height: 640px; border: none; max-width: 100%;" allow="xr-spatial-tracking; vr; gyroscope; accelerometer; fullscreen; autoplay; xr" scrolling="no" allowfullscreen="true"  frameborder="0" src="https://webobook.com/public/640856a645a63d6c531f5c72,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&" allowvr="yes" ></iframe>
+        <iframe id="evrFrame" width="100%" height="640" style="width: 100%; height: 640px; border: none; max-width: 100%;"  allowvr="yes" allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"  frameborder="0" src="https://webobook.com/public/640856a645a63d6c531f5c72,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&" ></iframe>
         <div class="card-body">
           <h5 class="card-title text-white fw-bold ">Barriera corralina</h5>
           <p class="card-text text-white">Le barriere coralline sono tra gli ecosistemi più ricchi di specie animali e vegetali al mondo e grazie ai coralli offre protezione a migliaia di pesci e molluschi.</p>
+          <a href="https://webobook.com/public/640856a645a63d6c531f5c72,en"  target="_blank" class="btn btn-primary rounded-pill px-4">Virtual tour</a>
         </div>
       </div>
     </div>
