--- a/src/app/components/card-details/card-details.component.html
+++ b/src/app/components/card-details/card-details.component.html
@@ -1,22 +1,18 @@
 <div class="container-fluid">
-<a href="http://localhost:4200/tour"
-class="btn btn-info btn-lg px-4 me-sm-3 fw-bold text-dark m-3 mt-3" onclick="window.close()">
-<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-  class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
-  <path
-    d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z">
-  </path>
-</svg>
-Indietro
-</a>
-
 
 <div class="d-flex align-items-center justify-content-center py-5" >
-  <div class="card mb-3" style="max-width: 640px;">
-    <img [src]="thumbnailUrl">
-    <div class="card-body">
-      <h5 class="card-title pt-5" id="title">{{title}}</h5>
-      <p class="card-text" id="body">Non ho un body</p>
+  <div class="card " style="max-width: 640px;">
+    <img [src]="immagine">
+    <div class="card-body px-4">
+      <h5 class="card-title pt-2 fw-bold" id="title">Nome comune: {{nome_comune}}</h5>
+
+      <h5 class="card-title pt-2 fst-italic fw-bold" >Nome scientifico: {{nome_scientifico}}</h5>
+
+      <p class="card-text pt-2 fw-medium">Habitat: {{habitat}}</p>
+
+      <p class="card-text">{{descrizione}}</p>
+
+      <a href="http://localhost:4200/tour" class="btn btn-primary rounded-pill px-3" onclick="window.close()" > Indietro</a>
     </div>
   </div>
 </div>
