--- a/src/app/components/tour/tour.component.html
+++ b/src/app/components/tour/tour.component.html
@@ -23,7 +23,7 @@
         <div class="card-body">
           <h5 class="card-title text-white fw-bold ">La baia degli squali</h5>
           <p class="card-text text-white">La baia degli squali, la grande vasca dedicata ai predatori del mare, che ospita, oltre a diverse specie di squalo provenienti da vari ambienti marini, altri pesci interessanti.</p>
-          <a href="https://webobook.com/public/64079c811b33b177b67de1d2,en"  target="_blank" class="btn btn-primary rounded-pill px-4">Virtual tour</a>
+          <a href="https://webobook.com/public/64079c811b33b177b67de1d2,en"  target="_blank" class="btn btn-primary rounded-pill px-4">Entra</a>
         </div>
       </div>
     </div>
@@ -33,7 +33,7 @@
         <div class="card-body">
           <h5 class="card-title text-white fw-bold ">Barriera corralina</h5>
           <p class="card-text text-white">Le barriere coralline sono tra gli ecosistemi più ricchi di specie animali e vegetali al mondo e grazie ai coralli offre protezione a migliaia di pesci e molluschi.</p>
-          <a href="https://webobook.com/public/640856a645a63d6c531f5c72,en"  target="_blank" class="btn btn-primary rounded-pill px-4">Virtual tour</a>
+          <a href="https://webobook.com/public/640856a645a63d6c531f5c72,en"  target="_blank" class="btn btn-primary rounded-pill px-4">Entra</a>
         </div>
       </div>
     </div>
@@ -43,7 +43,7 @@
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Virtual tour</a>
+          <a href="#" class="btn btn-primary">Entra</a>
 
         </div>
       </div>
@@ -54,7 +54,7 @@
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">Virtual tour</a>
+          <a href="#" class="btn btn-primary">Entra</a>
 
         </div>
       </div>
