--- a/src/app/components/edit-cards/edit-cards.component.scss
+++ b/src/app/components/edit-cards/edit-cards.component.scss
@@ -31,7 +31,7 @@ h1{
 }
 
 .form-box{
-  background-color: rgba(255, 255, 255, 0.63);
+  background-color: rgba(255, 255, 255, 0.87);
 }
 
 input, textarea {
@@ -63,6 +63,14 @@ label{
     border-color: rgb(192, 51, 0);
   }
 
+  .form-control{
+    border-color: rgb(192, 192, 192);
+  }
+
+  textarea{
+    border-color: rgb(192, 192, 192);
+  }
+
   .form-control.is-invalid{
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23ff4500'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23ff4500' stroke='none'/%3e%3c/svg%3e");
     border-color: orangered!important;
@@ -87,9 +95,6 @@ label{
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 69, 0);
     }
 
-    textarea{
-      border: none;
-    }
 
     .alert{
       color: #00050B!important;
@@ -112,4 +117,22 @@ label{
       .btn:hover{
         background-color: rgb(192, 51, 0);
         border-color: rgb(192, 51, 0);
+      }
+
+      .indietro{
+        background-color: transparent;
+        border: none!important;
+        color: orangered;
+        font-size: 18px;
+
+      }
+
+      .indietro:hover{
+        text-decoration: underline;
+        background-color: transparent;
+        border-color: transparent;
+        font-weight: bolder;
+        transition: 0.1s;
+        color: orangered!important;
+
       }
