--- a/src/app/components/navbar/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar/navbar.component.html
@@ -19,7 +19,7 @@
           </li>
 
           <li class="nav-item" *ngIf="showAdminBoard">
-            <a class="nav-link active fw-bold" aria-current="page" routerLink="/edit_cards">Cards</a>
+            <a class="nav-link active fw-bold" aria-current="page" routerLink="/all_cards">Gestisci</a>
           </li>
 
 
