update delete card

--- a/src/app/components/all-cards/all-cards.component.html
+++ b/src/app/components/all-cards/all-cards.component.html
@@ -8,7 +8,7 @@
           <h2 class="fw-bold">Gestione Cards</h2>
         </div>
         <div class="col-7">
-          <a class="btn btn-secondary rounded-pill fw-bolder" routerLink="/edit_cards"><i class="bi bi-plus-circle-fill"
+          <a class="btn btn-secondary rounded-pill fw-bolder" routerLink="/add_card"><i class="bi bi-plus-circle-fill"
               id="plus"></i> <span class="pt-1">Aggiungi Card</span></a>
         </div>
       </div>
