--- a/src/app/components/navbar/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar/navbar.component.scss
@@ -17,12 +17,18 @@ img{
 
 }
 
+.navbar-nav li.active > a::after {
+  width: 100%;
+}
+
+
+
 .navbar-nav li > a:after {
     content: '';
     display: block;
     width: 0;
     height: 3px;
-    background: orangered;
+    background: #ff4500;
     transition: width .3s;
 }
 .navbar-nav li > a:hover::after {
@@ -36,6 +42,9 @@ img{
 
 }
 
+.navbar-nav li > a.active:after {
+  width: 100%;
+}
 
 
 .navbar{
@@ -53,9 +62,6 @@ img{
 .dropdown-toggle::after{
   background: none!important;
 }
-
-
-
 
 .btn-close{
   --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ff4500'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
@@ -75,4 +81,7 @@ img{
   .logout{
     margin-left: 0!important;
   }
+
 }
+
+
