--- a/src/app/components/tour/tour.component.html
+++ b/src/app/components/tour/tour.component.html
@@ -39,11 +39,11 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://img.freepik.com/free-photo/mount-mont-blanc-covered-snow-reflecting-water-evening-chamonix-france_181624-33408.jpg?w=1060&t=st=1680128043~exp=1680128643~hmac=0689dce0bc69313c24fc8fedfcc8339a24a17a527d536205b3790c0a9670690c" class="card-img-top" alt="...">
+        <iframe id="evrFrame" width="100%" height="640" style="width: 100%; height: 640px; border: none; max-width: 100%;"  allowvr="yes" allow="xr-spatial-tracking;vr;gyroscope;accelerometer;fullscreen;" scrolling="no" allowfullscreen="true"  frameborder="0" src="https://webobook.com/public/64281f30de04680f43792b92,en?ap=false&si=false&sm=false&sp=false&sfr=false&sl=false&sop=false&" ></iframe>
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Entra</a>
+          <h5 class="card-title  text-white fw-bold">Il regno dei ghiacci</h5>
+          <p class="card-text text-white">La suggestiva scenografia con pareti laccate bianco a effetto ghiaccio accompagna i visitatori alla scoperta dell’inospitale continente antartico e delle aree subantartiche.</p>
+          <a href="https://webobook.com/public/64281f30de04680f43792b92,en"  target="_blank" class="btn btn-primary rounded-pill px-4">Entra</a>
 
         </div>
       </div>
