put table admin

--- a/src/app/components/all-cards/all-cards.component.scss
+++ b/src/app/components/all-cards/all-cards.component.scss
@@ -86,7 +86,6 @@ table.table tr th, table.table tr td {
 }
 
 .bi{
-  color: red;
   cursor: pointer;
   font-size: 22px;
 }
@@ -103,6 +102,13 @@ td .text {
 .desc{
   width: 380px!important;
 }
+
+.icons{
+  padding-left: 5px!important;
+  padding-right: 5px!important;
+}
+
+
 
 ::-webkit-scrollbar {
   width: 5px;
