--- a/src/app/components/all-cards/all-cards.component.html
+++ b/src/app/components/all-cards/all-cards.component.html
@@ -29,8 +29,10 @@
         </thead>
         <tbody>
           <tr *ngFor="let card of cards">
-            <td>
-              <a class="delete " title="Delete" data-toggle="tooltip" (click)="elimina(card.id)" ><i class="bi bi-trash-fill"></i></a>
+            <td class="icons">
+              <a class="delete" title="Delete" data-toggle="tooltip" (click)="elimina(card.id)" ><i class="bi bi-trash3-fill ps-1 pe-1 text-danger"></i></a>
+              <a class="modify" title="Modify" data-toggle="tooltip" (click)="modifica(card.id)"><i class="bi bi-pencil-square ps-2 text-primary"></i></a>
+              <!-- (click)="modifica(card.id)"-->
             </td>
             <td><img [src]="card.immagine" class="avatar" alt="Avatar"></td>
             <td>{{card.nome_comune}}</td>
