--- a/src/app/components/all-cards/all-cards.component.html
+++ b/src/app/components/all-cards/all-cards.component.html
@@ -28,11 +28,10 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let card of cards">
+          <tr *ngFor="let card of cards | paginate: { itemsPerPage: 5, currentPage: p } ">
             <td class="icons">
               <a class="delete" title="Delete" data-toggle="tooltip" (click)="elimina(card.id)" ><i class="bi bi-trash3-fill ps-1 pe-1 text-danger"></i></a>
               <a class="modify" title="Modify" data-toggle="tooltip" (click)="modifica(card.id)"><i class="bi bi-pencil-square ps-2 text-primary"></i></a>
-              <!-- (click)="modifica(card.id)"-->
             </td>
             <td><img [src]="card.immagine" class="avatar" alt="Avatar"></td>
             <td>{{card.nome_comune}}</td>
@@ -47,6 +46,8 @@
         </tbody>
       </div>
       </table>
+      <pagination-controls class="pagination py-2 d-flex justify-content-end pe-5" (pageChange)="p = $event"></pagination-controls>
+
     </div>
   </div>
 
