--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,14 @@
 ::-webkit-scrollbar {
   width: 7px;
+
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
+  background-color: none;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: orangered;
-
 }
 
 ::-webkit-scrollbar-thumb:hover {
