coockie policy and fix form modifica card

--- a/src/app/components/add-card/add-card.component.html
+++ b/src/app/components/add-card/add-card.component.html
@@ -104,7 +104,7 @@
     </form>
 
     <div class="alert alert-success text-center fw-bold" *ngIf="isSuccessful">
-      Creazione avvenuta con successo!
+      Creazione della card "{{form.nome_comune}}" avvenuta con successo!
       <br>
       <a class="btn btn-primary mt-5  rounded-pill px-4" routerLink="/all_cards">Indietro</a>
     </div>
