--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -24,6 +24,11 @@
               <a  class="text-white" routerLink="/contatti">contatti</a>
             </h6>
           </div>
+          <div class="col-md-2">
+            <h6 class="text-uppercase">
+              <a  class="text-white" routerLink="/cookie_policy" target="_blank">Privacy</a>
+            </h6>
+          </div>
 
         </div>
       </section>
