--- a/src/app/components/modifica-card/modifica-card.component.scss
+++ b/src/app/components/modifica-card/modifica-card.component.scss
@@ -136,3 +136,11 @@ label{
         color: orangered!important;
 
       }
+
+      .alert{
+        color: orangered!important;
+        font-weight: bold;
+        padding: 10px;
+        border: 1px solid orangered;
+        font-size: 16px;
+      }
