--- a/src/app/components/modifica-card/modifica-card.component.html
+++ b/src/app/components/modifica-card/modifica-card.component.html
@@ -1,3 +1,4 @@
+
 <app-navbar [isLoggedIn]="isLoggedIn"></app-navbar>
 
 <div class="container-fluid body py-5">
@@ -32,6 +33,7 @@
         <textarea type="text" class="form-control" autocomplete="off" name="descrizione" [(ngModel)]="descrizione" required></textarea>
       </div>
 
+      <div *ngIf="errore" class="text-danger alert my-4 text-center">Tutti i campi sono obbligatori. <br>Si prega di compilare correttamente il form.</div>
 
       <div class="form-group d-flex justify-content-center mt-4 ">
         <button class="btn btn-primary btn-block rounded-pill px-4" (click)="onSubmit()">Modifica</button>
@@ -43,7 +45,8 @@
     </form>
 
     <div class="alert alert-success text-center fw-bold" *ngIf="isSuccessful">
-      Creazione avvenuta con successo!
+      Modifica della card "{{nome_comune}}" avvenuta con successo!
+
       <br>
       <a class="btn btn-primary mt-5  rounded-pill px-4" routerLink="/all_cards">Indietro</a>
     </div>
