--- a/src/app/components/navbar/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar/navbar.component.html
@@ -1,12 +1,14 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-body-tertiary ">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
-      <img src="assets/img/logo-acquario-di-genova-negative.png" alt="logo" >
+      <img src="assets/img/logo-acquario-di-genova-negative.png" alt="logo">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+      aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+    <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasNavbar"
+      aria-labelledby="offcanvasNavbarLabel">
       <div class="offcanvas-header">
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
@@ -20,24 +22,23 @@
 
           <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link fw-bold" aria-current="page" routerLink="/">Home</a>
-        </li>
-
-
-
-
-          <li class="nav-item" *ngIf="showAdminBoard">
-            <a class="nav-link  fw-bold" aria-current="page" routerLink="/all_cards" routerLinkActive="active">Gestione</a>
           </li>
 
+          <li class="nav-item" *ngIf="showAdminBoard">
+            <a class="nav-link  fw-bold" aria-current="page" routerLink="/all_cards"
+              routerLinkActive="active">Gestione</a>
+          </li>
 
           <li class="nav-item">
-            <a class="nav-link  btn-tertiary rounded-pill text-white fw-bold" aria-current="page" routerLink="/tour" routerLinkActive="active" *ngIf="isLoggedIn">
+            <a class="nav-link  btn-tertiary rounded-pill text-white fw-bold" aria-current="page" routerLink="/tour"
+              routerLinkActive="active" *ngIf="isLoggedIn">
               Tour virtuale
             </a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link fw-bold" aria-current="page" routerLink="/contatti" routerLinkActive="active">Contatti</a>
+            <a class="nav-link fw-bold" aria-current="page" routerLink="/contatti"
+              routerLinkActive="active">Contatti</a>
           </li>
 
           <li class="nav-item">
@@ -48,7 +49,8 @@
 
 
           <li class="nav-item">
-            <a class="nav-link mb-2 btn-tertiary rounded-pill me-2 text-white fw-bold  logout" (click)="logout()" routerLink="/" *ngIf="isLoggedIn">
+            <a class="nav-link mb-2 btn-tertiary rounded-pill me-2 text-white fw-bold  logout" (click)="logout()"
+              routerLink="/" *ngIf="isLoggedIn">
               Logout
             </a>
           </li>
@@ -58,25 +60,3 @@
     </div>
   </div>
 </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
