--- a/src/app/components/modifica-card/modifica-card.component.scss
+++ b/src/app/components/modifica-card/modifica-card.component.scss
@@ -138,7 +138,7 @@ label{
       }
 
       .alert{
-        color: orangered!important;
+        color: rgb(0, 0, 0)!important;
         font-weight: bold;
         padding: 10px;
         border: 1px solid orangered;
