--- a/src/app/components/card-details/card-details.component.scss
+++ b/src/app/components/card-details/card-details.component.scss
@@ -1,48 +1,33 @@
-.card {
-  margin: 0 auto;
-  max-width: 640px;
-}
-
-
-  .container-fluid{
+  .container-fluid {
     background-image: url("../../../assets/img/abisso.jpg");
-    height: 100%;
+    min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 
   }
 
-.container-fluid::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.3);
-    z-index: -10000;
-  }
-
-  .card{
-    border: none!important;
-    border-radius: 0;
+  .card {
+    margin: 0 auto;
+    max-width: 640px;
   }
 
   .card {
-    //box-shadow: 0px 4px 10px rgba(70, 97, 177, 0.804)!important;
+    border: none !important;
+    border-radius: 0;
   }
 
-  .card-body{
+  .card-body {
     background: linear-gradient(#01052e, #00050B);
     color: white;
     text-align: justify;
   }
 
-  .card img{
+  .card img {
     max-height: 300px;
     object-fit: cover;
   }
+
   .card-img-top {
     max-height: 250px;
     object-fit: cover;
@@ -54,18 +39,18 @@
     display: inline-block;
     vertical-align: -0.220em;
     fill: currentcolor;
-}
+  }
 
-.btn{
-background-color: orangered;
-border: 1px solid orangered;
-font-weight: 600;
-margin-top: 10px;
-margin-bottom: 10px;
+  .btn {
+    background-color: orangered;
+    border: 1px solid orangered;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
 
-}
+  }
 
-.btn:hover{
-  background-color: rgb(212, 57, 0);
-  border-color: rgb(212, 57, 0 );
-}
+  .btn:hover {
+    background-color: rgb(212, 57, 0);
+    border-color: rgb(212, 57, 0);
+  }
